log
Sat May 14 02:41:31 UTC 2022: 
 tests:  0|5
total_score: 0/70
ecc7a87
Sat May 14 23:05:28 UTC 2022: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:13: error: expected identifier before ‘[’ token
       if(n->[i][k]==0){
             ^
Compilation failed
b045636
Sat May 14 23:05:47 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9ff5d59
Sat May 14 23:18:41 UTC 2022: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|5
total_score: 0/70
34e8d60
Sat May 14 23:25:47 UTC 2022: 
 sudoku.c | 18 ++++++++----------
 1 file changed, 8 insertions(+), 10 deletions(-)
 tests:  2|4
total_score: 15/70
86cf045
Mon May 16 01:59:20 UTC 2022: 
 sudoku.c | 40 ++++++++++++++++++++++++++++++++++++++++
 1 file changed, 40 insertions(+)
 tests:  5|3
total_score: 35/70
9ed6627
Mon May 16 02:05:50 UTC 2022: 
 sudoku.c | 40 ++++++++++++++++++++--------------------
 1 file changed, 20 insertions(+), 20 deletions(-)
 tests:  6|2
total_score: 45/70
154f0ca
Mon May 16 02:10:55 UTC 2022: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  0|0
50fda3f
